tests/e2e/service_output_readonly.error
Error: syntax error in story at line 1, column 11

1|    when http server listen as client
                

E0143: server `listen` requires argument `path`.
