tests/e2e/service_output_readonly.story
when http server listen as client
    client = 2
